--- a/src/main/resources/templates/include.fore/category/productsByCategory.html
+++ b/src/main/resources/templates/include.fore/category/productsByCategory.html
@@ -1,4 +1,4 @@
-<div th:fragment="html">
+<div th:fragment="html" xmlns:th="http://www.w3.org/1999/xhtml">
     <div class="categoryProducts">
         <div v-for="p in c.products"  class="productUnit" :price="p.promotePrice">
             <div class="productUnitFrame">
