--- a/src/main/resources/templates/include.fore/product/modal4login.html
+++ b/src/main/resources/templates/include.fore/product/modal4login.html
@@ -1,4 +1,5 @@
-<div  th:fragment="html" class="modal " id="loginModal" tabindex="-1" role="dialog" >
+<div th:fragment="html" class="modal " id="loginModal" tabindex="-1" role="dialog"
+     xmlns:th="http://www.w3.org/1999/xhtml">
     <div class="modal-dialog loginDivInProductPageModalDiv">
         <div class="modal-content">
             <div class="loginDivInProductPage">
