--- a/src/main/resources/templates/include.fore/product/productDetail.html
+++ b/src/main/resources/templates/include.fore/product/productDetail.html
@@ -1,4 +1,4 @@
-<div th:fragment="html">
+<div th:fragment="html" xmlns:th="http://www.w3.org/1999/xhtml">
     <div class="productDetailDiv" v-show="showDetail" >
         <div class="productDetailTopPart">
             <a href="#nowhere" class="productDetailTopPartSelectedLink selected">商品详情</a>
